[package]
name = "atm"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
iced_core = "*"
transistor = "1.0.0-beta"
bcrypt = "0.8"

[dev-dependencies]
mockito = "0.26"
transistor = { version = "1.0.0-beta", features = ["mock"]}